playersIdGamesLogGet.ts added + changes in leaders requests
