# src/modules/requests/apiWebNhle/playerIdGameLogSeasonGameTypeGet.ts
@@ -1,0 +1,11 @@
+import {apiWebNhleRequestService} from "./base";
+import {PlayerIdGameLogGet} from "../../../types/domain/nhl-api/playerIdGameLogGet";
+
+export const playerIdGameLogSeasonGameTypeGet = (
+    id: number,
+    season: number,
+    gameType: number
+) => apiWebNhleRequestService<PlayerIdGameLogGet>({
+    url: `/player/${id}/game-log/${season}/${gameType}`,
+    method: 'GET',
+});
